--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
